--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
 *{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
+body {
+  background-color: aquamarine;
+}
+
+body a {
+  text-decoration: none;
+  color: white;
 }
 
 header {
@@ -18,9 +28,34 @@ header {
 
 header > nav {
   display: flex;
-  list-style-type: none;
   gap: 40px;
   padding: 90px;
   color: white;
-  font-size: 1.5em
+  font-size: 1.5em;
+}
+
+main {
+  display: flex;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  background-color: rgb(216, 83, 83);
+  align-items: center;
+  padding-top: 100px;
+}
+
+aside > nav {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  align-items: center;
+  gap: 20px;
+}
+
+.conteudo {
+  background-color: #999;
+  padding: 20px
 }
