--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,13 @@ aside > nav {
   background-color: #999;
   padding: 20px
 }
+
+footer {
+  color: white;
+  background-color: #333;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
